Squashed 'drawiobatch/drawio/' changes from 3e1c341b..ac04da25
96874030 8.2.2 release
169f2b1a 8.2.1 release
dc501036 Updated supported browsers
7998a4c3 8.1.6 release
d4826a27 8.1.5 release
0c002b8c 8.1.4 release
b98a33fc 8.1.3 release
c58969fb 8.1.2 release
46eebc76 8.1.1 release
ad0383dd 8.1.0 release
ccb881dc 8.0.9 release
850e813d 8.0.8 release
59d9f0cd 8.0.7 release
8fc5fa7f 8.0.6 release

git-subtree-dir: drawiobatch/drawio
git-subtree-split: ac04da255b868c1f87a8ff594a05da9a93aab023

--- a/src/main/webapp/mxgraph/css/common.css
+++ b/src/main/webapp/mxgraph/css/common.css
@@ -10,6 +10,7 @@ div.mxRubberband {
 	background: url('../images/transparent.gif');
 	border-color: transparent;
 	border-style: solid;
+	display: inline-block;
 	position: absolute;
 	overflow: visible;
 	word-wrap: normal;
